unpackaged/main/default/objects/MuleSoft_Integration_Settings__mdt/MuleSoft_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Esta metadata contine los parametros utilizados para la integracion con Mulesoft.</description>
    <label>MuleSoft Integration Settings</label>
    <pluralLabel>MuleSoft Integration Settings</pluralLabel>
</CustomObject>