unpackaged/main/default/objects/MuleSoft_Integration_Settings__mdt/fields/AccessToken_Url__c.field-meta.xml
<CustomField>
    <fullName>AccessToken_Url__c</fullName>
    <description>Contiene la URL que se utiliza para obtener el access token para autenticar las diferentes requests.</description>
    <label>AccessToken Url</label>
    <type>Url</type>
</CustomField>