unpackaged/main/default/objects/MuleSoft_Integration_Settings__mdt/fields/Api_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Api_Base_Url__c</fullName>
    <description>El URL base para hacer los request.</description>
    <label>Api Base Url</label>
    <type>Url</type>
</CustomField>