unpackaged/main/default/objects/MuleSoft_Integration_Settings__mdt/fields/ClientId_c__c.field-meta.xml
<CustomField>
    <fullName>ClientId_c__c</fullName>
    <description>Este campo contiene el ID del cliente para la integración.</description>
    <label>ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>