unpackaged/main/default/objects/MuleSoft_Integration_Settings__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>Este campo contiene la cadena de texto usada como secreto de cliente para conectar la integración.</description>
    <label>ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>