unpackaged/main/default/objects/MuleSoft_Integration_Settings__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Contiene el alcance de la autorización.</description>
    <label>Scope</label>
    <type>Url</type>
</CustomField>